feat: update interview workflow and docs